portfolio whitespace bug

--- a/src/home/portfolio.css
+++ b/src/home/portfolio.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   background-color: pink;
+  height: 100vh;
 }
 
 /* Header */
